@@ -4,23 +4,26 @@ Hash: SHA256
 AUX bootled-initd-1 540 SHA256 9ed71f592bca04cb31c41e866b8320548b111abd5647cb178f4bf6e27ae650f3 SHA512 8d45c70a1f7f529dc89c86f848fcb2adb6dceb19be9bba4f2a78ccaa3cd063859f127db9a9655419cc2eba75d4e5b442895213221c53fd2ceae63f3e128be885 WHIRLPOOL f9b0ebc42f9e6082f3d2af857e760c4b4d8a523daea6a6670e1b2d07db8d1f295ea423f346ac03d344919a6df3eba319f434ff9171b5432a38ead53d8c32ef21
 AUX copynetsetup-initd-1 773 SHA256 0b932fca9a6447a733e5adb37494cb0caab1ee010fe776b76c3945150838ddfe SHA512 c1f5a3c99d623da64b99e17c7d4fcf3a08bda0785bf7bfe65b3635675ece76e486ae63133177560e3af68d973c33eae3ea1b4d7ebaeb47dac7ac1dd9a0c3ef0e WHIRLPOOL 4e25acdf8b197d76e58b3907f77a5365757030851181227595afa93f1d378d62a43715278ce8570f2f90c36de4e649f3d2b5478828efaea2a0cea5dd394f3df0
 AUX marvell-tso-udev-1 222 SHA256 6ed5ef22ebcfd90bc2c2187f429516b6b8c6d26108b531629a3341ce48addfae SHA512 e0acb1308c3f25afe5e9e709ccc04a0fd33c38f12ac3ca6a07a756b56e82ff85d445443bfa01e1d4c1f4b82329418a42831dd83b8ac58f12c235a8f3fb66962a WHIRLPOOL b5f5cf0667d957db37fcb53642a811c87d9ef5414a320f367170933d715b3724442237e65b07762056167766d84c4f4497c1e67f7131b6c4bd5d630974523fdb
+AUX poweroff-b3-1 148 SHA256 348edd6404476cf60b8d08ae9c2bd06b7362ecbf9f9af94d09b8d8d4de3216ef SHA512 2a81ad4c0fc2d729fe05214bfb0b9ce1778cebc0c739aac9a9a98ca8b4eedd4b42fe166d23d7e9febd06fbda1622b9f3905dda53cf92be409c781864aded1b81 WHIRLPOOL e287947d63f9dc61b2030b7a2cd16f5dd3e8cbefb9dba441f1331b58298e071b24ceb7091f52a2309f26e1f054059cef07d55ad672e223cb900bd88008aac13c
 EBUILD b3-init-scripts-1.0.0.ebuild 717 SHA256 6f0fa52a4105ace3ae2c23ae90e6b5b6d6c1729fe0080c0f5e7d8f4332b0eaaa SHA512 8a7df79c255e05793083c9112068bca2cdfc85446d7fb5b4d3ca110048350d4717d3d66cf9156d634a9ac80b5e23313335be4757a20c339c0fd44a4d81f81b13 WHIRLPOOL 89c7089d745b45e8790f60faeaff2b4c538390c90caf0313c0e4db1b7c1c7780d84699e1935624ba069a47510cbce6164af9e6bc06df86f4c38d1399969568f5
 EBUILD b3-init-scripts-1.0.1.ebuild 861 SHA256 1f219a208e91ea6ca21f77eb152f4ef0ec99450e080657223c067ea59f4f2134 SHA512 1ee8912ef506ff5253647a0cdfb057bb21f858a89598ec04de94d3d61d49c5db1c965c225d2b2c037c7b29c07692f644d715d7827d321b39f6d507d2528505a6 WHIRLPOOL dfeda6c2090a2ae7bda43445ad984279c1f5798699ee8d01b5e692944d4396e5331d7644be731b079185796fa0a295f3da0f5ddd30f96980528ef30c2493054e
+EBUILD b3-init-scripts-1.0.2.ebuild 943 SHA256 ebc8189b1401aac424e489459ad8f583eba69add82e15ae57c13a805a3281b0d SHA512 25341705bc5376eda13e50e1573ee6c15d6c93f2af0e88decb9aa5338b3c9bdc35a02d0f5ca03fda486e0b331ae76df12b81a386edb3279f7258c37cc9c22ef1 WHIRLPOOL 084cf643c6902408f1dbe5327ba2e1c236f6cca57aaa74242dfa2f8cbab5f271fdefae38d97c6bb6fc727b52fb9d6bd586dc47b7ed981361717f17a45c5a67bf
+MISC ChangeLog 497 SHA256 487f91fe9f1fe02eba2bc1cd927e773fd06874439c253f3ada465d410656a605 SHA512 ad10789d3cce8b9af184243a3268db44c98351d887916e0b9df8c4ab719ce0a128ffb8eca3deb99e26e059fcc6748f266073a51bc472f8c35978708584afa149 WHIRLPOOL 9736f59e30fb917e3b6daf91ebfc434ce31d42ecacdb1456bcb17dd2719222e81f6a7281ed334ceb4b8dd881c55f18daa471f300f21fa171841cf0c0d22dacd6
 MISC metadata.xml 617 SHA256 c4526e3fb19b3a6d16064ca831432bc3ad172c2903951b19b3ac88b042555e1e SHA512 23c7b366d54b3174a3de4b033c15668aca5bfb2322050aea388aec09f4d234b37766accd16d473670721453c9eda3ce918fdc8e646de3e643fb2e597e1caea3c WHIRLPOOL 34148bd254c5ca25d0a33c20f9609beb834c4b6514cc445413522645a81c087da32aff08a340bae9bcdc50ac643ba91724df618836d255f8138a698d212774d5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU19ABAAoJEDHIDbLd52zqOjQP/2TUB8mqOiAcJxS3GkU+2bvu
-hDC2PwR5pZdjG81eDqORXDtENzy4UfDoHuJ/6gPBrZch05gQJPsWoYK1jJpK3Nj+
-8glx/cES5I4nQb9O2Z9OPX2+ZJcqX/88ZuMsMilZ0fKJ6lFvSZFzyWIv2LVYajLg
-CO4su36b+UISkDj+6NSIvL1LxMoc3y2S9Zs4wqBHQKhzw+bazIKEZuv9A5b/w6G1
-NTf9jq1D+e1vQ88Itk74FwQKv2SSXnRi8/oUqD8rojG3edydPnPQsZlZpc6pO3je
-FWkcQP0xZk2IrPaARMLzN/kmxTFvOabFUQMmktWdCPoxjr1BEH7Z8mmleML2M5bD
-cXWBkhsv2qSGFaAwNaU3/NGGKezEpsEVbSaHngj1JS22oOE+/PQcXFHRaK453XYo
-9jZwrxZpKxF9qSWJJ5G8CmXslNUX2hjTiub2xb4r9CFj3D5RwdSssuaxLxm3zX81
-JHmSLhpzVu4Px7SOuYQLpU5JxwB0SjCpa7erBfi9DcSTqa1xPPgGGq8orI28xFij
-oUbps/YAXNi6EDQbiMwoCZ8OA7W/E0DiCupLcf9Rh8dvtDyqNEnFs2j9MiRllHw9
-cij/T1BeXXuxw114XLsIW3MNA84r2/sVMkfB0gVnS2WGVx/TjjhFKUzQCLMYxmbK
-NTSsB3acJE5NvY3db13o
-=uyxE
+iQIcBAEBCAAGBQJU2KyFAAoJEDHIDbLd52zqR9MP/0sHtbPdmBZAaLoylBN2ZY+y
+nCNo8SDejZwRZ5ft9TBaVeyPQUqa40VXwWzMxMaUhlJV4rM8wyNXJN+IxGGln25c
+GwLhR3lGZcCKanOAP1pt7MVohXQd/jArbbPUmZusRhuKTswn+Dl7b5gZkxZAIUaT
+jNrqhhFP8p9lP2Oh08JaNZbMGKYXJOGMt7mEXLc8cer4oGm7CwnLmy3YGHtV8uPE
+9cdFHWaFHvHFlvDbOsqYb0RVy2lgcm00P2eqbJ7qQvrqKwChASuPgyY5+Xihp9Wf
+sEJVAXckhBl9RxTU1Ntww7swWiJw51+YAe52aD2LtUGH6cN8Drx0+Og7NM4r+WQI
+ttz8DNmAZ8SV8MOvVCNSdoICJHy1dYe25vNX79da4nhcxzBz1A22Mh696Q8l38My
+kYXaXOjrT6RJfgrQG69jTmthQmUkGdUJoZREhKgVTem/vqUH79DokTezm4Xm5uYh
+5WXFclwKP76V4lCCtRkDJieAW1/AjHYiML3BVI862Ypr+7R3HkeWkLNkkzArf2V9
+OhX987n0aX9SsZLdEQMaqjhNbYzifOOdKq9Uj4JbUNZNvoYa3oVx36w5Ab9FpcOi
+jNtxbt/zGshkfMZH8zvPyIrgEkR70UniwDRcB1lb8fypgj2SI/ECbvE+hHkcxssO
+hKu1Uqcz11dCPd2BUHCR
+=RWW9
 -----END PGP SIGNATURE-----
