@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*b3-init-scripts-1.0.2 (09 Feb 2015)
+
+  09 Feb 2015; sakaki <sakaki@deciban.com> +b3-init-scripts-1.0.2.ebuild,
+  +files/poweroff-b3-1:
+  Add poweroff-b3 command; dep on bubba-buttond
+
 *b3-init-scripts-1.0.1 (08 Feb 2015)
 
   08 Feb 2015; sakaki <sakaki@deciban.com> +b3-init-scripts-1.0.1.ebuild,
